Змінено мову, алт до картинок

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uah">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Студія</a>
@@ -64,13 +64,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/box.jpg" alt="Програмування" width="370" height="294" />
+            <img src="./images/box.jpg" alt="Декстопні додатки" width="370" height="294" />
           </li>
           <li>
-            <img src="./images/box2.jpg" alt="Адаптивна верстка" width="370" height="294" />
+            <img src="./images/box2.jpg" alt="Мобільні додатки" width="370" height="294" />
           </li>
           <li>
-            <img src="./images/box3.jpg" alt="Дизайн" width="370" height="294" />
+            <img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -80,8 +80,8 @@
         <ul>
           <li>
             <img src="./images/img1.jpg" alt="Ігор Дем'яненко Дизайнер" width="270" height="260" />
-            <p>Ігор Дем'яненко</p>
-            <h3>Product Designer</h3>
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
@@ -90,13 +90,13 @@
               width="270"
               height="260"
             />
-            <p>Ольга Репіна</p>
-            <h3>Frontend Developer</h3>
+            <h3>Ольга Репіна</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Микола Тарасов Маркетолог" width="270" height="260" />
-            <p>Микола Тарасов</p>
-            <h3>Marketing</h3>
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -105,17 +105,19 @@
               width="270"
               height="260"
             />
-            <p>Михайло Єрмаков</p>
-            <h3>UI Designer</h3>
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
+          <li>
+            <a href="">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
